# components/dms2223backend/dms2223backend/data/db/schema.py
@@ -6,7 +6,7 @@ from sqlalchemy.engine import Engine  # type: ignore
 from sqlalchemy.orm import sessionmaker, scoped_session, registry  # type: ignore
 from sqlalchemy.orm.session import Session  # type: ignore
 from dms2223backend.data.config import backendconfiguration
-from dms2223backend.data.db.results import Discussion, Answer, Comment
+from dms2223backend.data.db.results import Discussion, Answer, Comment, Report
 
 
 # Required for SQLite to enforce FK integrity when supported
@@ -49,6 +49,7 @@ class Schema():
         Discussion.map(self.__registry)
         Answer.map(self.__registry)
         Comment.map(self.__registry)
+        Report.map(self.__registry)
         self.__registry.metadata.create_all(self.__create_engine)
 
     def new_session(self) -> Session:
