# components/dms2223frontend/dms2223frontend/data/rest/backendservice.py
@@ -16,8 +16,8 @@ class BackendService():
         apikey_header: str = 'X-ApiKey-Backend',
         apikey_secret: str = ''
         ):
-        """ Constructor method.
-
+        """ 
+        Constructor method.
         Initializes the client.
 
         Args:
@@ -126,9 +126,15 @@ class BackendService():
             - ResponseData: If successful, the contents hold a list of user data dictionaries.
               Otherwise, the contents will be an empty list.
         """
+        #post para recibir de la discusion adecuada
         response_data: ResponseData = ResponseData()
-        response: requests.Response = requests.get(
+        response: requests.Response = requests.post(
             self.__base_url() + f'/discussions/{id}',
+            json={
+                'discussionid': id,
+                'content': "vacio"
+                
+            },
             headers={
                 'Authorization': f'Bearer {token}',
                 self.__apikey_header: self.__apikey_secret
@@ -151,7 +157,7 @@ class BackendService():
             - token (Optional[str]): The discussion session token.
             - title: A string with the discussion title.
             - content: A string with the discussion content.
-
+            
         Returns:
             - ResponseData: If successful, the contents hold a list of user data dictionaries.
               Otherwise, the contents will be an empty list.
@@ -176,3 +182,90 @@ class BackendService():
         return response_data
 
    
+
+    def list_comments(self, token: Optional[str], id: int) -> ResponseData:
+        """ Requests a list of registered questions.
+        Args:
+            token (Optional[str]): The question session token.
+        Returns:
+            - ResponseData: If successful, the contents hold a list of user data dictionaries.
+              Otherwise, the contents will be an empty list.
+        """
+        response_data: ResponseData = ResponseData()
+        response: requests.Response = requests.post(
+            self.__base_url() + f'/discussions/{id}',
+            json={
+                'answerid': id,
+                'content': "vacio"
+                
+            },
+            headers={
+                'Authorization': f'Bearer {token}',
+                self.__apikey_header: self.__apikey_secret
+            }
+        )
+        response_data.set_successful(response.ok)
+        if response_data.is_successful():
+            response_data.set_content(response.json())
+        else:
+            response_data.add_message(response.content.decode('ascii'))
+            response_data.set_content([])
+        return response_data
+
+
+    
+    def create_comment(self, token: Optional[str], answerid: int, content: str) -> ResponseData:
+        """ Requests a discussion creation.
+        Args:
+            - token (Optional[str]): The discussion session token.
+            - title: A string with the discussion title.
+            - content: A string with the discussion content.
+        Returns:
+            - ResponseData: If successful, the contents hold a list of user data dictionaries.
+              Otherwise, the contents will be an empty list.
+        """
+        response_data: ResponseData = ResponseData()
+        response: requests.Response = requests.post(
+            self.__base_url() + f'/answers/{answerid}/comments',
+            json={
+                'answerid': answerid,
+                'content': content
+            },
+            headers={
+                'Authorization': f'Bearer {token}',
+                self.__apikey_header: self.__apikey_secret
+            }
+        )
+        response_data.set_successful(response.ok)
+        if response_data.is_successful():
+            response_data.set_content(response.json())
+        else:
+            response_data.add_message(response.content.decode('ascii'))
+        return response_data
+    def list_reports(self, token: Optional[str]) -> ResponseData:
+        """ Requests a list of registered questions.
+
+        Args:
+            token (Optional[str]): The question session token.
+
+        Returns:
+            - ResponseData: If successful, the contents hold a list of user data dictionaries.
+              Otherwise, the contents will be an empty list.
+        """
+        response_data: ResponseData = ResponseData()
+        response: requests.Response = requests.get(
+            self.__base_url() + f'/discussions/reports',
+            headers={
+                'Authorization': f'Bearer {token}',
+                self.__apikey_header: self.__apikey_secret
+            }
+        )
+        response_data.set_successful(response.ok)
+        if response_data.is_successful():
+            response_data.set_content(response.json())
+        else:
+            response_data.add_message(response.content.decode('ascii'))
+            response_data.set_content([])
+        return response_data
+
+    
